fix: improve board layout on smaller screens

--- a/src/styles/board.css
+++ b/src/styles/board.css
@@ -46,7 +46,7 @@
   }
 }
 
-@media screen and (max-height: 600px) {
+@media screen and (max-height: 800px) {
   .board {
     padding: 1em;
     gap: 1em;
